--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,18 @@ body {
   min-height: 100vh;
 }
 
+.error {
+  max-width: 40rem;
+  margin: 1rem auto;
+  padding: 1rem;
+  background-color: #f4c7c7;
+  color: #3e0505;
+  border-radius: 1%;
+}
+.error p {
+  text-align: left;
+  padding-bottom: 40px;
+}
 #main-header {
   display: flex;
   justify-content: space-between;
